--- a/letswift-server/vagrantfile
+++ b/letswift-server/vagrantfile
@@ -16,6 +16,7 @@ KITURA_BRANCH = 'master'.freeze
 Vagrant.configure(2) do |config|
   config.vm.box = BOX_URL
   config.vm.network 'forwarded_port', guest: 8090, host: 8090
+  config.vm.network "private_network", ip: "192.168.99.100"
 
   # Prevents "stdin: is not a tty" on Ubuntu (https://github.com/mitchellh/vagrant/issues/1673)
   config.vm.provision 'fix-no-tty', type: 'shell' do |s|
